--- a/Config/Stash-Evolve.yaml
+++ b/Config/Stash-Evolve.yaml
@@ -123,6 +123,7 @@ proxy-groups:
     proxies: &F
       - Proxy
       - Auto
+      - Fallback
       - HongKong
       - TaiWan
       - Singapore
@@ -138,6 +139,7 @@ proxy-groups:
       - DIRECT
       - Proxy
       - Auto
+      - Fallback
       - HongKong
       - TaiWan
       - Singapore
