--- a/Config/Clash-Evolve.yaml
+++ b/Config/Clash-Evolve.yaml
@@ -73,7 +73,7 @@ proxy-providers:
   All: &All #建立锚点
     type: http
     url: ""
-    # 强烈推荐你使用Clash类型订阅链接或Sub-Store转换订阅链接填入引号""内使用。
+    # 强烈推荐你使用Clash类型订阅链接填入引号""内使用。
     # PS：如机场没有Clash类型链接，可尝试使用通用订阅链接，如仍未解决，可通过Sub-Store或ACL4SSR等进行订阅转换。
     interval: 3600
     path: ./all.yaml
