--- a/Config/Stash-Evolve.yaml
+++ b/Config/Stash-Evolve.yaml
@@ -64,7 +64,7 @@ dns:
     - '*.mcdn.bilivideo.cn'
   nameserver:
   # 默认DNS服务器，支持udp/tcp/dot/doh/doq
-    - https://dns.alidns.com/dns-query
+    - https://223.6.6.6/dns-query
     - https://doh.pub/dns-query
     
 proxy-providers:
@@ -72,7 +72,7 @@ proxy-providers:
   All:
     type: http
     url: ""
-    # 强烈推荐你使用Clash类型订阅链接或Sub-Store转换订阅链接填入引号""内使用。
+    # 强烈推荐你使用Clash类型订阅链接填入引号""内使用。
     # PS：如机场没有Clash类型链接，可尝试使用通用订阅链接，如仍未解决，可通过Sub-Store或ACL4SSR等进行订阅转换。
     interval: 3600
     path: ./all.yaml
