--- a/Config/Clash-Evolve.yaml
+++ b/Config/Clash-Evolve.yaml
@@ -1,7 +1,7 @@
 # Clash Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub主页: https://github.com/Coldvvater
-# Update Date: 2022.09.24
+# Update Date: 2022.10.25
 
 subscribe-url: 你的订阅链接
 # 替换上面文字用于Stash获取机场流量信息并在主页显示
@@ -193,7 +193,7 @@ proxy-groups:
 
   - name: Streaming # 国际媒体
     type: select
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/GlobalMedia.png
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Streaming.png
     proxies:
       *F
 
@@ -266,7 +266,7 @@ rule-providers:
   Unbreak: # 规则修正
     type: http
     behavior: classical
-    url: https://raw.githubusercontents.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml
+    url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml
     path: ./ruleset/Unbreak.yaml
     interval: 86400
 
@@ -294,7 +294,7 @@ rule-providers:
   BiliBili: # 哔哩哔哩
     type: http
     behavior: classical
-    url: https://raw.githubusercontents.com/Coldvvater/Clash/master/RuleSet/bilibili.yaml
+    url: https://raw.githubusercontents.com/dler-io/Rules/main/Clash/Provider/Media/Bilibili.yamll
     path: ./ruleset/BiliBili.yaml
     interval: 86400
 
@@ -303,13 +303,6 @@ rule-providers:
     behavior: classical
     url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml
     path: ./ruleset/Spotify.yaml
-    interval: 86400
-
-  YouTube: # 油管视频
-    type: http
-    behavior: classical
-    url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
-    path: ./ruleset/YouTube.yaml
     interval: 86400
 
   TikTok: # 海外抖音
@@ -331,27 +324,6 @@ rule-providers:
     behavior: classical
     url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
     path: ./ruleset/Telegram.yaml
-    interval: 86400
-
-  Twitter: # 推特分流
-    type: http
-    behavior: classical
-    url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
-    path: ./ruleset/twitter.yaml
-    interval: 86400
-
-  Google: # 谷歌分流
-    type: http
-    behavior: classical
-    url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
-    path: ./ruleset/Google.yaml
-    interval: 86400
-
-  Github: # Github
-    type: http
-    behavior: classical
-    url: https://raw.githubusercontents.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
-    path: ./ruleset/Github.yaml
     interval: 86400
 
   Foreign: # 国外网站
@@ -397,13 +369,9 @@ rules:
   - RULE-SET,Hijacking,ADblock
   - RULE-SET,BiliBili,BiliBili
   - RULE-SET,Spotify,Spotify
-  - RULE-SET,YouTube,Foreign
   - RULE-SET,TikTok,TikTok
   - RULE-SET,Streaming,Streaming
   - RULE-SET,Telegram,Telegram
-  - RULE-SET,Twitter,Foreign
-  - RULE-SET,Google,Foreign
-  - RULE-SET,Github,Foreign
   - RULE-SET,Foreign,Foreign
   - RULE-SET,Apple,Apple
   - RULE-SET,Microsoft,Microsoft
