--- a/Egern/Module/Adblock/YouTubeBlockAds.yaml
+++ b/Egern/Module/Adblock/YouTubeBlockAds.yaml
@@ -8,7 +8,7 @@
 #原始仓库：  https://github.com/DivineEngine
 #原始仓库：  https://github.com/Maasea
 #原始仓库：  https://github.com/app2smile
-#原始仓库：  https://gitlab.com/ddgksf2013
+#原始仓库：  https://codeberg.org/ddgksf2013
 ########################################
 
 url_rewrites:
