--- a/Surfboard/Surfboard-Evolve.conf
+++ b/Surfboard/Surfboard-Evolve.conf
@@ -153,9 +153,9 @@ Final = select, Proxy, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点选择
 Proxy = select, Auto,Fallback,Others,no-alert=0, hidden=0, include-all-proxies=0
 # > 自动筛选
-Auto = url-test, policy-path=https://www.baidu.com/, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
+Auto = url-test, policy-path=, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, policy-path=https://www.baidu.com/, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, 
+Fallback = fallback, policy-path=, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, 
 # > 国外网站
 Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
 # > 国内网站
@@ -179,17 +179,17 @@ ADblock = select, REJECT,DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 
 # > 外部节点(在此替换您的订阅链接)
 # > 香港节点
-HongKong = select, policy-path=https://www.baidu.com/, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+HongKong = select, policy-path=, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 台湾节点
-TaiWan = select, policy-path=https://www.baidu.com/, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+TaiWan = select, policy-path=, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 狮城节点
-Singapore = select, policy-path=https://www.baidu.com/, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+Singapore = select, policy-path=, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 日本节点
-Japan = select, policy-path=https://www.baidu.com/, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+Japan = select, policy-path=, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 美国节点
-America = select, policy-path=https://www.baidu.com/, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+America = select, policy-path=, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 其他节点
-Others = select, DIRECT, policy-path=https://www.baidu.com/, policy-regex-filter=.*,interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+Others = select, DIRECT, policy-path=, policy-regex-filter=.*,interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 # > 远程规则集
