--- a/Surfboard/Surfboard-Evolve.conf
+++ b/Surfboard/Surfboard-Evolve.conf
@@ -217,8 +217,8 @@ RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Surge/T
 # > 国际流媒体
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming,update-interval=86400
 
-# > 电报ASN
-RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list,Telegram,update-interval=86400
+# > 电报信息
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram,update-interval=86400
 
 # > 国外网站分流
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,Foreign,update-interval=86400
@@ -230,7 +230,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft,update-interval=86400
 
 # > 国内网站分流
-# RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic,update-interval=86400
 # > 本地规则分流
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
