--- a/Surfboard/Surfboard-Evolve.conf
+++ b/Surfboard/Surfboard-Evolve.conf
@@ -241,7 +241,7 @@ IP-CIDR,224.0.0.0/4,DIRECT
 IP-CIDR6,fe80::/10,DIRECT
 IP-CIDR,119.28.28.28/32,DIRECT
 IP-CIDR,182.254.116.0/24,DIRECT
-GEOIP,CN,Domestic
+GEOIP,CN,DIRECT
 FINAL,Final
 
 [Panel]
