--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -240,7 +240,7 @@ IP-CIDR,224.0.0.0/3,no-resolve
 IP-CIDR6,::1/128,no-resolve
 IP-CIDR6,fc00::/7,no-resolve
 IP-CIDR6,fe80::/10,no-resolve
-# GEOIP,CN,Domestic
+# GEOIP,CN,DIRECT
 FINAL,FINAL
 
 [URL Rewrite]
