--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.11.11
+# > Update Date: 2022.11.28
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -81,6 +81,13 @@ use-local-host-item-for-proxy = false
 # > UDP IP 防泄漏
 # 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
 udp-policy-not-supported-behaviour = REJECT
+
+# > 提高处理 UDP 流量优先级            
+# udp-priority = true
+
+# > 切换网络后不再重新进行 VPN 配置
+fast-switch = true
+
 
 # > 隐藏 VPN 图标
 hide-vpn-icon = false
