--- a/Surfboard/Config/Surfboard-Evolve.conf
+++ b/Surfboard/Config/Surfboard-Evolve.conf
@@ -4,6 +4,9 @@
 # > Update Date: 2022.11.27
 
 [General]
+# > 日志等级
+loglevel = info
+
 # > 指定应用程序所使用的DNS服务器
 dns-server = system,119.29.29.29,223.5.5.5,114.114.114.114
 
