--- a/Surfboard/Config/Surfboard-Evolve.conf
+++ b/Surfboard/Config/Surfboard-Evolve.conf
@@ -1,26 +1,26 @@
 # > Surfboard Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.11.27
+# > Update Date: 2022.11.28
 
 [General]
 # > 日志等级
 loglevel = info
 
-# > 指定应用程序所使用的DNS服务器
+# > DNS服务器
 dns-server = system,119.29.29.29,223.5.5.5,114.114.114.114
 
-# > 指定应用程序所使用的DoH服务器
+# > 加密的DNS服务器
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, www.baidu.com //444
 
 # > 代理延迟测试
-proxy-test-url = http://www.gstatic.com/generate_204
+proxy-test-url = http://cp.cloudflare.com/generate_204
 
 # > 网络延迟测试
-internet-test-url = http://www.gstatic.cn/generate_204
+internet-test-url = http://www.aliyun.com
 
 # > 连通性测试超时
 test-timeout = 5
@@ -34,8 +34,9 @@ http-listen = 0.0.0.0:1234
 # > socks5监听地址
 socks5-listen = 127.0.0.1:1235
 
-# > UDP转发策略
-udp-policy-not-supported-behaviour = DIRECT
+# > UDP IP 防泄漏
+# 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险
+udp-policy-not-supported-behaviour = REJECT
 
 [Host]
 # > 域名指定DNS映射
