--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -52,7 +52,7 @@ include-local-networks = false
 loglevel = notify
 # > 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
-# > Always Real IP Hosts
+# > 返回真实IP
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 # > Hijack DNS
 # hijack-dns = 8.8.8.8:53, 8.8.4.4:53
