--- a/Surfboard/Config/Surfboard-Evolve.conf
+++ b/Surfboard/Config/Surfboard-Evolve.conf
@@ -3,6 +3,8 @@
 # > GitHub主页: https://github.com/Coldvvater
 # > Update Date: 2022.11.28
 
+# 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+
 [General]
 # > 日志等级
 loglevel = info
