--- a/Egern/Module/Others/Q-Search.yaml
+++ b/Egern/Module/Others/Q-Search.yaml
@@ -7,7 +7,7 @@
 # 特别鸣谢：
 # @zZPiglet https://github.com/zZPiglet
 # @Neurogram-R https://github.com/Neurogram-R
-# @ddgksf2013 https://ocd0522.tk/ddgksf2013
+# @ddgksf2013 https://github.com/ddgksf2013
 ##################################################################################################
 
 scriptings:
