--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.11.28
+# > Update Date: 2022.12.01
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -86,7 +86,7 @@ udp-policy-not-supported-behaviour = REJECT
 # udp-priority = true
 
 # > 切换网络后不再重新进行 VPN 配置
-fast-switch = true
+# fast-switch = true
 
 
 # > 隐藏 VPN 图标
