--- a/Clash/Config/Custom-Evolve.ini
+++ b/Clash/Config/Custom-Evolve.ini
@@ -32,22 +32,22 @@ custom_proxy_group=Proxy`select`[]Auto`[]Fallback`[]Load-Balance`[]Others
 custom_proxy_group=Auto`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=Fallback`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=Load-Balance`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Foreign`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]DIRECT
-custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America
-custom_proxy_group=BiliBili`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America
-custom_proxy_group=Spotify`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]DIRECT
-custom_proxy_group=TikTok`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]DIRECT
-custom_proxy_group=Streaming`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]DIRECT
-custom_proxy_group=Telegram`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]DIRECT
-custom_proxy_group=Apple`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America
-custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America
+custom_proxy_group=Foreign`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others`[]DIRECT
+custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others
+custom_proxy_group=BiliBili`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others
+custom_proxy_group=Spotify`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others`[]DIRECT
+custom_proxy_group=TikTok`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others`[]DIRECT
+custom_proxy_group=Streaming`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others`[]DIRECT
+custom_proxy_group=Telegram`select`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others`[]DIRECT
+custom_proxy_group=Apple`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others
+custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxy`[]Auto`[]Fallback`[]Load-Balance`[]HongKong`[]TaiWan`[]Singapore`[]Japan`[]America`[]Others
 custom_proxy_group=ADblock`select`[]REJECT`[]DIRECT
 custom_proxy_group=HongKong`select`(港|HK|Hong Kong)
 custom_proxy_group=TaiWan`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=Singapore`select`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=Japan`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=America`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=Others`select`.*
+custom_proxy_group=Others`select`[]DIRECT`.*
 ;设置分组标志位
 
 enable_rule_generator=true
