--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.01
+# > Update Date: 2022.12.09
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -204,7 +204,6 @@ FINAL,Final,dns-failed
 
 [Host]
 *.tw = server:1.1.1.1
-*testflight.apple.com = server:8.8.4.4
 # > DNS 映射
 # IPv6
 ip6-localhost = ::1
@@ -216,78 +215,60 @@ dl.google.com = server:119.29.29.29
 dl.l.google.com = server:119.29.29.29
 update.googleapis.com = server:119.29.29.29
 localhost = 127.0.0.1
-apple.com = server:223.5.5.5
+# > Apple
 *.apple.com = server:223.5.5.5
-appsto.re = server:223.5.5.5
 *.appsto.re = server:223.5.5.5
-aaplimg.com = server:223.5.5.5
 *.aaplimg.com = server:223.5.5.5
-apple-dns.net = server:223.5.5.5
 *.apple-dns.net = server:223.5.5.5
-apple.co = server:223.5.5.5
 *.apple.co = server:223.5.5.5
-applestore.com = server:223.5.5.5
 *.applestore.com = server:223.5.5.5
-apple.com.cn = server:223.5.5.5
 *.apple.com.cn = server:223.5.5.5
-cdn-apple.com = server:223.5.5.5
 *.cdn-apple.com = server:223.5.5.5
-apple-cloudkit.com = server:223.5.5.5
 *.apple-cloudkit.com = server:223.5.5.5
-crashlytics.com = server:223.5.5.5
 *.crashlytics.com = server:223.5.5.5
-icloud.com = server:223.5.5.5
 *.icloud.com = server:223.5.5.5
-icloud.com.cn = server:223.5.5.5
 *.icloud.com.cn = server:223.5.5.5
-icloud-content.com = server:223.5.5.5
 *.icloud-content.com = server:223.5.5.5
-me.com = server:223.5.5.5
 *.me.com = server:223.5.5.5
-mzstatic.com = server:223.5.5.5
 *.mzstatic.com = server:223.5.5.5
-organicfruitapps.com = server:223.5.5.5
 *.organicfruitapps.com = server:223.5.5.5
-apple.com.akadns.net = server:223.5.5.5
 *.apple.com.akadns.net = server:223.5.5.5
-icloud.com.akadns.net = server:223.5.5.5
 *.icloud.com.akadns.net = server:223.5.5.5
-taobao.com = server:223.6.6.6
+*testflight.apple.com = server:8.8.4.4
+# > Alibaba
 *.taobao.com = server:223.6.6.6
-tmall.com = server:223.6.6.6
 *.tmall.com = server:223.6.6.6
-jd.com = server:119.29.29.29
+*.alicdn.com = server:223.5.5.5
+*.aliyun.com = server:223.5.5.5
+hdslb.com = server:119.29.29.29
+# > Tencent
 *.jd.com = server:119.28.28.28
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
-*.alicdn.com = server:223.5.5.5
-aliyun.com = server:223.5.5.5
-*.aliyun.com = server:223.5.5.5
-weixin.com = server:119.28.28.28
 *.weixin.com = server:119.28.28.28
-bilibili.com = server:119.29.29.29
 *.bilibili.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-163.com = server:119.29.29.29
+# > NetEase
 *.163.com = server:119.29.29.29
-126.com = server:119.29.29.29
 *.126.com = server:119.29.29.29
 *.126.net = server:119.29.29.29
 *.127.net = server:119.29.29.29
 *.netease.com = server:119.29.29.29
-mi.com = server:119.29.29.29
+# > xiaomi
 *.mi.com = server:119.29.29.29
-xiaomi.com = server:119.29.29.29
 *.xiaomi.com = server:119.29.29.29
+# > Others
 *.unicompayment.com = server:119.29.29.29
 *.ximalaya.com = server:119.29.29.29
 *.vercel.app = server:119.29.29.29
 *.vercel.com = server:119.29.29.29
+# > Baidu
 *.baidu.com = server:119.29.29.29
 *.bdstatic.com = server:119.29.29.29
+# > Routers
 router.asus.com = server:syslib // Asus Router
 tplogin.cn = server:syslib // TP-Link Router
 tplinklogin.net = server:syslib // TP-Link Router
+# > Local Area Network
 *.lan = server:syslib
 
 [Panel]
