--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # Loon Config
-# Update Date: 2022.11.11
+# Update Date: 2022.12.09
 # author: Coldvvater
 # GitHub主页: https://github.com/Coldvvater
 # TG Channel: https://t.me/Ison_Channel
@@ -46,79 +46,66 @@ interface-mode = auto
 #ssid:LOON's WIFI = server:system
 #ssid:LOON WIFI = server:https://example.com/dns-query
 *.tw = server:1.1.1.1
-*testflight.apple.com = server:8.8.4.4
-apple.com = server:223.5.5.5
+# > Firebase Cloud Messaging
+mtalk.google.com = 108.177.125.188
+# > Google Dl
+dl.google.com = server:119.29.29.29
+dl.l.google.com = server:119.29.29.29
+update.googleapis.com = server:119.29.29.29
+localhost = 127.0.0.1
+# > Apple
 *.apple.com = server:223.5.5.5
-appsto.re = server:223.5.5.5
 *.appsto.re = server:223.5.5.5
-aaplimg.com = server:223.5.5.5
 *.aaplimg.com = server:223.5.5.5
-apple-dns.net = server:223.5.5.5
 *.apple-dns.net = server:223.5.5.5
-apple.co = server:223.5.5.5
 *.apple.co = server:223.5.5.5
-applestore.com = server:223.5.5.5
 *.applestore.com = server:223.5.5.5
-apple.com.cn = server:223.5.5.5
 *.apple.com.cn = server:223.5.5.5
-cdn-apple.com = server:223.5.5.5
 *.cdn-apple.com = server:223.5.5.5
-apple-cloudkit.com = server:223.5.5.5
 *.apple-cloudkit.com = server:223.5.5.5
-crashlytics.com = server:223.5.5.5
 *.crashlytics.com = server:223.5.5.5
-icloud.com = server:223.5.5.5
 *.icloud.com = server:223.5.5.5
-icloud.com.cn = server:223.5.5.5
 *.icloud.com.cn = server:223.5.5.5
-icloud-content.com = server:223.5.5.5
 *.icloud-content.com = server:223.5.5.5
-me.com = server:223.5.5.5
 *.me.com = server:223.5.5.5
-mzstatic.com = server:223.5.5.5
 *.mzstatic.com = server:223.5.5.5
-organicfruitapps.com = server:223.5.5.5
 *.organicfruitapps.com = server:223.5.5.5
-apple.com.akadns.net = server:223.5.5.5
 *.apple.com.akadns.net = server:223.5.5.5
-icloud.com.akadns.net = server:223.5.5.5
 *.icloud.com.akadns.net = server:223.5.5.5
-taobao.com = server:223.6.6.6
+*testflight.apple.com = server:8.8.4.4
+# > Alibaba
 *.taobao.com = server:223.6.6.6
-tmall.com = server:223.6.6.6
 *.tmall.com = server:223.6.6.6
-jd.com = server:119.29.29.29
+*.alicdn.com = server:223.5.5.5
+*.aliyun.com = server:223.5.5.5
+hdslb.com = server:119.29.29.29
+# > Tencent
 *.jd.com = server:119.28.28.28
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
-*.alicdn.com = server:223.5.5.5
-aliyun.com = server:223.5.5.5
-*.aliyun.com = server:223.5.5.5
-weixin.com = server:119.28.28.28
 *.weixin.com = server:119.28.28.28
-bilibili.com = server:119.29.29.29
 *.bilibili.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-163.com = server:119.29.29.29
+# > NetEase
 *.163.com = server:119.29.29.29
-126.com = server:119.29.29.29
 *.126.com = server:119.29.29.29
 *.126.net = server:119.29.29.29
 *.127.net = server:119.29.29.29
 *.netease.com = server:119.29.29.29
-mi.com = server:119.29.29.29
+# > xiaomi
 *.mi.com = server:119.29.29.29
-xiaomi.com = server:119.29.29.29
 *.xiaomi.com = server:119.29.29.29
+# > Others
 *.unicompayment.com = server:119.29.29.29
 *.ximalaya.com = server:119.29.29.29
 *.vercel.app = server:119.29.29.29
 *.vercel.com = server:119.29.29.29
+# > Baidu
 *.baidu.com = server:119.29.29.29
 *.bdstatic.com = server:119.29.29.29
-mtalk.google.com = 108.177.125.188
-dl.google.com = server:119.29.29.29
-dl.l.google.com = server:119.29.29.29
+# > Routers
+router.asus.com = server:syslib // Asus Router
+tplogin.cn = server:syslib // TP-Link Router
+tplinklogin.net = server:syslib // TP-Link Router
 
 [Proxy]
 # 内置 DIRECT、REJECT 策略
