--- a/Shadowrocket/Config/Shadowrocket-Evolve.conf
+++ b/Shadowrocket/Config/Shadowrocket-Evolve.conf
@@ -5,7 +5,7 @@
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
-# 通用设置
+# > 通用设置
 [General]
 # > 代理测速 URL
 proxy-test-url = http://cp.cloudflare.com/generate_204
