--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -322,7 +322,7 @@ Hijacking: # > 运营劫持
   Telegram: # > 电报信息
     type: http
     behavior: classical
-    url: https://gitlab.com/Coldvvater/mononoke/-/raw/master/Stash/RuleSet/ASN_Telegram.yaml
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
     path: ./ruleset/Telegram.yaml
     interval: 86400
 
