--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # > Loon Config
-# > Update Date: 2022.12.09
+# > Update Date: 2022.12.11
 # > author: Coldvvater
 # > GitHub主页: https://github.com/Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
@@ -103,9 +103,9 @@ hdslb.com = server:119.29.29.29
 *.baidu.com = server:119.29.29.29
 *.bdstatic.com = server:119.29.29.29
 # > Routers
-router.asus.com = server:syslib // Asus Router
-tplogin.cn = server:syslib // TP-Link Router
-tplinklogin.net = server:syslib // TP-Link Router
+router.asus.com = server:system
+tplogin.cn = server:system
+tplinklogin.net = server:system
 
 [Proxy]
 # > 内置 DIRECT、REJECT 策略
