--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -3,7 +3,7 @@
 # > GitHub主页: https://github.com/Coldvvater
 # > Update Date: 2022.12.11
 ---
-subscribe-url: 你的订阅链接
+subscribe-url: 填上你的订阅链接
 # > 替换上面文字用于Stash获取机场流量信息并在主页显示
 
 mixed-port: 7890
