--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # > Loon Config
-# > Update Date: 2022.12.11
+# > Update Date: 2022.12.12
 # > author: Coldvvater
 # > GitHub主页: https://github.com/Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
@@ -271,8 +271,8 @@ https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Loon/Plugin/Tool/Q-
 https://raw.githubusercontent.com/Peng-YM/Loon-Gallery/master/loon-gallery.plugin, tag=Loon Gallery, enabled=true
 # > TestFlight解锁区域限制
 https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/TF-Download.plugin, tag=TestFlightDownload, enabled=false
-# > 知乎助手Plus
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.lnplugin, tag=Zhihu Plus, enabled=true
+# > 知乎App去广告
+https://raw.githubusercontent.com/app2smile/rules/master/plugin/zhihu.plugin, tag=ZhihuAds, enabled=true
 # > 去广告复写
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Loon/Advertising/Advertising.plugin, tag=Advertising, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png, enabled=true
 # > 重定向
