--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.09
+# > Update Date: 2022.12.21
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -50,10 +50,13 @@ include-local-networks = false
 
 # > 日志等级
 loglevel = notify
+
 # > 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
+
 # > 返回真实IP
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
+
 # > Hijack DNS
 # hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > VIF Excluded Routes
@@ -88,9 +91,17 @@ udp-policy-not-supported-behaviour = REJECT
 # > 切换网络后不再重新进行 VPN 配置
 # fast-switch = true
 
-
 # > 隐藏 VPN 图标
 hide-vpn-icon = false
+
+# > HTTP-API
+# 依次为：密码，主机名，端口(xxxxxx改成你自定义的密码）
+http-api = xxxxxx@0.0.0.0:6170
+# > HTTP-API-TLS
+http-api-tls = false
+# > Web控制器
+# Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
+http-api-web-dashboard = true
 
 [Replica]
 # > 隐藏 Apple 请求
