--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -54,7 +54,7 @@ loglevel = notify
 # > 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
 
-# > 返回真实IP
+# > 返回真实IP Hosts
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 
 # > Hijack DNS
