--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # > Loon Config
-# > Update Date: 2022.12.12
+# > Update Date: 2022.12.22
 # > author: Coldvvater
 # > GitHub主页: https://github.com/Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
@@ -228,7 +228,7 @@ IP-CIDR6,::1/128,no-resolve
 IP-CIDR6,fc00::/7,no-resolve
 IP-CIDR6,fe80::/10,no-resolve
 # GEOIP,CN,DIRECT
-FINAL,FINAL
+FINAL,Final
 
 # > 重写规则
 [URL Rewrite]
