--- a/Surfboard/Config/Surfboard-Evolve.conf
+++ b/Surfboard/Config/Surfboard-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surfboard Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.09
+# > Update Date: 2022.12.22
 
 # 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -51,7 +51,7 @@ dl.l.google.com = server:119.29.29.29
 update.googleapis.com = server:119.29.29.29
 localhost = 127.0.0.1
 # > Apple
-*.apple.com = server:223.5.5.5
+apple.com = server:223.5.5.5
 *.appsto.re = server:223.5.5.5
 *.aaplimg.com = server:223.5.5.5
 *.apple-dns.net = server:223.5.5.5
@@ -75,13 +75,13 @@ localhost = 127.0.0.1
 *.tmall.com = server:223.6.6.6
 *.alicdn.com = server:223.5.5.5
 *.aliyun.com = server:223.5.5.5
-hdslb.com = server:119.29.29.29
 # > Tencent
 *.jd.com = server:119.28.28.28
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
 *.weixin.com = server:119.28.28.28
 *.bilibili.com = server:119.29.29.29
+hdslb.com = server:119.29.29.29
 # > NetEase
 *.163.com = server:119.29.29.29
 *.126.com = server:119.29.29.29
