--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -1,7 +1,7 @@
 # > Stash Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.21
+# > Update Date: 2022.12.22
 ---
 subscribe-url: 填上你的订阅链接
 # > 替换上面文字用于Stash获取机场流量信息并在主页显示
@@ -87,7 +87,7 @@ dns:
     'dl.l.google.com' : 119.29.29.29
     'update.googleapis.com' : 119.29.29.29
   # > Apple
-    '*.apple.com' : 223.5.5.5
+    'apple.com' : 223.5.5.5
     '*.appsto.re' : 223.5.5.5
     '*.aaplimg.com' : 223.5.5.5
     '*.apple-dns.net' : 223.5.5.5
@@ -112,13 +112,13 @@ dns:
     '*.alicdn.com': 223.5.5.5
     '*.aliyun.com': 223.5.5.5
     '*.alipay*.com': 223.5.5.5
-    'hdslb.com': 223.5.5.5
   # > Tencent
     '*.jd.com': 119.29.29.29
     '*.qq.com': 119.29.29.29
     '*.tencent.com': 119.29.29.29
     '*.weixin.com': 119.29.29.29
     '*.bilibili.com': 119.29.29.29
+    'hdslb.com': 223.5.5.5
   # > NetEase
     '*.163.com': 119.29.29.29
     '*.126.com': 119.29.29.29
