--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.12
+# > Update Date: 2022.12.22
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -47,7 +47,7 @@ server=/dl.l.google.com/119.29.29.29
 server=/update.googleapis.com/119.29.29.29
 # > Apple
 server=/testflight.apple.com/8.8.4.4
-server=/*.apple.com/223.5.5.5
+server=/apple.com/223.5.5.5
 server=/*.appsto.re/223.5.5.5
 server=/*.aaplimg.com/223.5.5.5
 server=/*.apple-dns.net/223.5.5.5
@@ -70,13 +70,13 @@ server=/*.alicdn.com/223.5.5.5
 server=/*.aliyun.com/223.5.5.5
 server=/*.taobao.com/223.5.5.5
 server=/*.tmall.com/223.5.5.5
-server=/hdslb.com/119.29.29.29
 # > Tencent
 server=/*.jd.com/119.29.29.29
 server=/*.qq.com/119.29.29.29
 server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
 server=/*.bilibili.com/119.29.29.29
+server=/hdslb.com/119.29.29.29
 # > NetEase
 server=/*.163.com/119.29.29.29
 server=/*.126.com/119.29.29.29
