--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -86,7 +86,7 @@ dns:
     'dl.l.google.com' : 119.29.29.29
     'update.googleapis.com' : 119.29.29.29
   # > Apple
-    '*.apple.com' : 223.5.5.5
+    'apple.com' : 223.5.5.5
     '*.appsto.re' : 223.5.5.5
     '*.aaplimg.com' : 223.5.5.5
     '*.apple-dns.net' : 223.5.5.5
@@ -111,13 +111,13 @@ dns:
     '*.alicdn.com': 223.5.5.5
     '*.aliyun.com': 223.5.5.5
     '*.alipay*.com': 223.5.5.5
-    'hdslb.com': 223.5.5.5
   # > Tencent
     '*.jd.com': 119.29.29.29
     '*.qq.com': 119.29.29.29
     '*.tencent.com': 119.29.29.29
     '*.weixin.com': 119.29.29.29
     '*.bilibili.com': 119.29.29.29
+    'hdslb.com': 119.29.29.29
   # > NetEase
     '*.163.com': 119.29.29.29
     '*.126.com': 119.29.29.29
