--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # > Loon Config
-# > Update Date: 2022.12.22
+# > Update Date: 2022.12.23
 # > author: Coldvvater
 # > GitHub主页: https://github.com/Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
@@ -17,7 +17,7 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 # > DNS 服务器
-dns-server = 223.5.5.5,119.29.29.29,114.114.114.114,system
+dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 # > DoH 服务器
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 # > Wi-Fi 访问
@@ -46,66 +46,61 @@ interface-mode = auto
 #ssid:LOON's WIFI = server:system
 #ssid:LOON WIFI = server:https://example.com/dns-query
 *.tw = server:1.1.1.1
+localhost = 127.0.0.1
 # > Firebase Cloud Messaging
 mtalk.google.com = 108.177.125.188
 # > Google Dl
 dl.google.com = server:119.29.29.29
 dl.l.google.com = server:119.29.29.29
 update.googleapis.com = server:119.29.29.29
-localhost = 127.0.0.1
 # > Apple
 apple.com = server:223.5.5.5
-*.appsto.re = server:223.5.5.5
-*.aaplimg.com = server:223.5.5.5
-*.apple-dns.net = server:223.5.5.5
-*.apple.co = server:223.5.5.5
-*.applestore.com = server:223.5.5.5
-*.apple.com.cn = server:223.5.5.5
-*.cdn-apple.com = server:223.5.5.5
-*.apple-cloudkit.com = server:223.5.5.5
-*.crashlytics.com = server:223.5.5.5
-*.icloud.com = server:223.5.5.5
-*.icloud.com.cn = server:223.5.5.5
-*.icloud-content.com = server:223.5.5.5
-*.me.com = server:223.5.5.5
-*.mzstatic.com = server:223.5.5.5
-*.organicfruitapps.com = server:223.5.5.5
-*.apple.com.akadns.net = server:223.5.5.5
-*.icloud.com.akadns.net = server:223.5.5.5
+*icloud.com = server:223.5.5.5
+*icloud.com.cn = server:223.5.5.5
 *testflight.apple.com = server:8.8.4.4
 # > Alibaba
-*.taobao.com = server:223.6.6.6
-*.tmall.com = server:223.6.6.6
 *.alicdn.com = server:223.5.5.5
+aliyun.com = server:223.5.5.5
 *.aliyun.com = server:223.5.5.5
-# > Tencent
+taobao.com = server:223.6.6.6
+*.taobao.com = server:223.6.6.6
+tmall.com = server:223.6.6.6
+*.tmall.com = server:223.6.6.6
+# > JD
+jd.com = server:119.29.29.29
 *.jd.com = server:119.28.28.28
+# > Tencent
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
+weixin.com = server:119.28.28.28
 *.weixin.com = server:119.28.28.28
+# > bilibili
+bilibili.com = server:119.29.29.29
 *.bilibili.com = server:119.29.29.29
 hdslb.com = server:119.29.29.29
 # > NetEase
+163.com = server:119.29.29.29
 *.163.com = server:119.29.29.29
+126.com = server:119.29.29.29
 *.126.com = server:119.29.29.29
 *.126.net = server:119.29.29.29
 *.127.net = server:119.29.29.29
 *.netease.com = server:119.29.29.29
 # > xiaomi
+mi.com = server:119.29.29.29
 *.mi.com = server:119.29.29.29
+xiaomi.com = server:119.29.29.29
 *.xiaomi.com = server:119.29.29.29
+# > Baidu
+*.baidu.com = server:119.29.29.29
+*.bdstatic.com = server:119.29.29.29
 # > Others
 *.unicompayment.com = server:119.29.29.29
 *.ximalaya.com = server:119.29.29.29
 *.vercel.app = server:119.29.29.29
 *.vercel.com = server:119.29.29.29
-# > Baidu
-*.baidu.com = server:119.29.29.29
-*.bdstatic.com = server:119.29.29.29
-# > Routers
-router.asus.com = server:system
-tplogin.cn = server:system
-tplinklogin.net = server:system
+# > Local Area Network
+*.lan = server:system
 
 [Proxy]
 # > 内置 DIRECT、REJECT 策略
